<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Reading Kids</string>
    <string name="menu_my_course">我的课程</string>
    <string name="menu_class_schedule">课程表</string>
    <string name="menu_task">预约陪读</string>
    <string name="menu_my_evaluation">我的测评</string>
    <string name="menu_my_order">我的订单</string>
    <string name="menu_my_customer_service">我的客服</string>
    <string name="menu_setting">设置</string>
    <string name="tips_0">欢迎使用Reading Kids</string>
    <string name="use_agreement_content_0">请充分阅读并理解</string>
    <string name="use_agreement_content_1">《Reading Kids用户服务协议》</string>
    <string name="use_agreement_content_2">和</string>
    <string name="use_agreement_content_3">《隐私声明》</string>
    <string name="use_agreement_content_4">\n
1.在仅浏览时，为保障服务所需，我们会申请系统权限收集设备信息、日志信息，用于信息推送。并申请存储权限,用于浏览过程中缓存相关文件。\n
2.为了基于你的所在位置向你推荐内容、展示信息，我们可能会申请位置权限。\n
3.为帮助你在APP中拨打投诉电话或其他咨询热线，我们可能会申请拨打电话权限，该权限不会收集隐私信息，且仅在你使用前述功能时使用。\n
4.GPS、相机、相册等敏感权限均不会默认开启，只有经过明示授权才会为实现功能或服务时使用，你均可以拒绝且不影响你继续使用自贸区云账户APP。</string>
    <string name="agree_and_continue">同意并继续</string>
    <string name="disagree">不同意</string>
    <string name="splash_service_agreement">服务协议</string>
    <string name="splash_privacy_policy">隐私政策</string>
    <string name="login_register">注册</string>
    <string name="login_verify_rb">快捷登录</string>
    <string name="login_password_rb">密码登录</string>
    <string name="login_verify_input">输入验证码</string>
    <string name="login_password_input">输入密码</string>
    <string name="login_phone_empty">手机号</string>
    <string name="login_verify_empty">验证码</string>
    <string name="login_password_empty">密码</string>
    <string name="login_phone_input">输入常用手机号</string>
    <string name="login_protocol">我已同意 Readingkids 用户协议和隐私政策</string>
    <string name="login_protocol_header">我已同意 Readingkids </string>
    <string name="login_protocol_user_agreement">用户协议</string>
    <string name="login_protocol_header_and">和</string>
    <string name="login_protocol_privacy_policy">隐私政策</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="get_again">重新获取</string>
    <string name="count_down_format" formatted="false">%1$d秒</string>
    <string name="captcha_target_format">验证码发送成功</string>
    <string name="login">登录</string>
    <string name="password_input_again">再次输入密码</string>
    <string name="password_input_again_hint">请再次输入密码</string>
    <string name="password_different_hint">两次密码输入不一致，请重新输入</string>
    <string name="welocme_login_register">登录/注册</string>
    <string name="welcome_wechat_login">微信登陆</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="retrieve_password">找回密码</string>
    <string name="phone_input">输入手机号</string>
    <string name="submit">提交</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="sign_out_tv">退出登录</string>
    <string name="privacy_statement">隐私声明</string>
    <string name="copyright">版权保护</string>
    <string name="contact_us">联系我们</string>
    <string name="setting">设置</string>
    <string name="message_title">我的消息</string>
    <string name="class_not_started">未上课</string>
    <string name="class_teaching">上课中</string>
    <string name="class_end">已结束</string>
    <string name="class_number_format">%1$d课时 /</string>
    <string name="class_schedule_title">课程表</string>
    <string name="my_schedule_title">我的课程</string>
    <string name="after_class_task_title">预约陪读</string>
    <string name="after_class_task">课后习题任务</string>
    <string name="after_class_task2">课后读书任务</string>
    <string name="remaining_appointments">剩余预约次数&#160;%1$d&#160;次</string>
    <string name="task_download">下载</string>
    <string name="task_upload">上传</string>
    <string name="my_test_title">我的测评</string>
    <string name="english_level">英语等级</string>
    <string name="score_title">评分详情</string>
    <string name="interjection">太棒啦！小朋友的评分为</string>
    <string name="hint">提示</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="login_out_hint">是否退出登录?</string>
    <string name="course_directory">课程目录</string>
    <string name="course_introduction">课程简介</string>
    <string name="teacher_introduction">老师介绍</string>
    <string name="user_detail_title">个人资料</string>
    <string name="user_detail_avatar">头像</string>
    <string name="user_detail_name_chinese">孩子中文名</string>
    <string name="user_detail_name_english">孩子英文名</string>
    <string name="user_detail_birthday">生日</string>
    <string name="user_detail_english_basis">英语基础</string>
    <string name="user_detail_commit">提交</string>
    <string name="user_detail_shoot">拍摄</string>
    <string name="user_detail_select">从相册中选择</string>
    <string name="album_need_permission">无法访问系统相册，是否打开应用设置授权？</string>
    <string name="permission_request">权限申请</string>
    <string name="set_permission">去设置</string>
    <string name="capture_error">拍摄失败</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="student_count_format">等%1$s人学习</string>
    <string name="detail_course_price">课程售价:</string>
    <string name="study_now">立即学习</string>
    <string name="order_all">全部</string>
    <string name="order_to_be_paid">待支付</string>
    <string name="paying">支付中</string>
    <string name="paid">已支付</string>
    <string name="order_title">我的订单</string>
    <string name="order_id_format">订单ID：%1$s</string>
    <string name="order_detail">订单详情</string>
    <string name="task_title">课后任务</string>
    <string name="expiration_time">失效时间:</string>
    <string name="select_english_basis">请选择孩子英语基础</string>
    <string name="select_age">请选择孩子年龄</string>
    <string name="start_assessment">开始测评</string>
    <string name="previous_question">上一题</string>
    <string name="next_question">下一题</string>
    <string name="question_input">输入</string>
    <string name="fill_question_subject">请回答问题</string>
    <string name="choose_the_right_word">选择正确的单词</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="record_subject">请朗读下列语句</string>
    <string name="test_question_title">测验详情</string>
    <string name="back_home">返回首页</string>
    <string name="question_submit_success">测评已完成，系统会在24小时内\n给出测评结果，请耐心等待</string>
    <string name="course_un_teach">未开课</string>
    <string name="course_already_teach">已开课</string>
    <string name="my_course">我的课程</string>
    <string name="course_is_over">课程已结束</string>
    <string name="level_format">评测等级：%1$s级</string>
    <string name="graded">已评分</string>
    <string name="basic_test">基础测验</string>
    <string name="english_upgrade_test_for_children">小朋友英语升级测试</string>
    <string name="desc_for_children">专业分级测验，帮助孩子更好的选择</string>
    <string name="reservation_now">立即预约</string>
    <string name="appointment_successful">预约成功</string>
    <string name="appointment_successful_hint">体验课预约成功，稍后会有客服联系\n您确定上课时间</string>
    <string name="back_to_homepage">返回首页</string>
    <string name="book_appointment">预约陪读</string>
    <string name="title_buddy">buddy列表</string>
    <string name="to_pay">去支付</string>
    <string name="total">总计：</string>
    <string name="order_already_create_message">您的订单已生成，请前往我的订单查看</string>
    <string name="view_order">查看订单</string>
    <string name="pay_bottom_format">去支付&#160;&#165;%1$s</string>
    <string name="buy_success_message">课程购买成功，您可在我的订单内查看</string>
    <string name="look">查看订单</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_detail">支付详情</string>
    <string name="goto_pay">去支付</string>
    <string name="please_agree_agreement">请同意用户协议</string>
    <string name="main_back_hint">再按一次退出</string>
    <string name="home">首页</string>
    <string name="course">课程</string>
    <string name="course_table">课程表</string>
    <string name="course_task">课后任务</string>
    <string name="teacher">老师</string>
    <string name="enter_room">进入教室</string>
    <string name="class_begin_time">开课时间</string>
    <string name="course_detail">课程详情</string>
    <string name="pay_money_hint">您需要支付</string>
    <string name="select_pay_way">选择支付方式</string>
    <string name="my_profile">我的资料</string>
    <string name="courese_detail">课程详情</string>
    <string name="enter_class">进入教室</string>
    <string name="my_test">我的测评</string>
    <string name="having_class_now">正在上课</string>
    <string name="reserve">预约</string>
    <string name="chapter_format">%1$d章节</string>
    <string name="book_progress_hint">预约陪读已推送给buddy\n请耐心等待buddy回复</string>
    <string name="already_book">已预约</string>
    <string name="book_detail">预约详情</string>
    <string name="book_success">预约成功</string>
    <string name="book_default_title">教你怎么读英语</string>
    <string name="add_format">+%1$s</string>
    <string name="token_expired">登录过期，请重新登录</string>
    <string name="go_login">去登录</string>
    <string name="i_know">我知道了</string>
    <string name="sunday">周日</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="book_list">书籍列表</string>
    <string name="select_birthday">请选择生日</string>
    <string name="select_basis">请选择基础</string>
    <string name="english_level_format">英语等级 %1$s</string>
    <string name="ask_image_save_to_device">是否保存该图片到设备？</string>
    <string name="ask_permission_to_open_camera">由于权限限制，无法启用系统摄像，是否打开权限设置？</string>
    <string name="ask_permission_to_read_album">由于权限限制，无法访问系统相册，是否打开权限设置？</string>
    <string name="ask_permission_to_save_image">由于权限限制，无法保存至设备，是否打开权限设置？</string>
    <string name="ask_permission_to_read_storage">由于权限限制，无法访问系统存储，是否打开权限设置？</string>
    <string name="image_save_success">图片保存成功</string>
    <string name="image_position_format" formatted="false">%d&#160;/&#160;%d</string>
    <string name="reserve_success">已预约成功</string>
    <string name="class_start_time">开课时间</string>
    <string name="wrap_format">\n%1$s</string>
    <string name="test_detail">测试详情</string>
    <string name="hint_empty_user">请先设置用户信息</string>
    <string name="classroom_not_exit">未找到教室</string>
    <string name="name_can_not_empty">学生姓名不能为空</string>
    <string name="wechat_not_install">检测到手机未安装微信</string>
    <string name="remote_login">您的账号已在其他设备登录，请重新登录</string>
    <string name="error_message_format">出现错误 %1$d</string>
    <string name="password_retrieved_successfull">密码找回成功</string>
    <string name="booking_please_wait">预约中，请耐心等待</string>
    <string name="minute_format">%1$s分钟</string>
    <string name="in_class">上课中</string>
    <string name="today">今天</string>
    <string name="already_cancel_pay">您已取消支付</string>
    <string name="pay_error">支付错误</string>
    <string name="permission_error">请授权相应权限</string>
    <string name="download_complete">下载完成</string>
    <string name="task_detail">预约陪读详情</string>
    <string name="inactivated">未激活</string>
    <string name="booking">预约中</string>
    <string name="boy">男</string>
    <string name="select_time">请选择时间</string>
    <string name="your_choice">你选择了</string>
    <string name="age_3">3岁</string>
    <string name="age_4">4岁</string>
    <string name="age_5">5岁</string>
    <string name="age_6">6岁</string>
    <string name="age_7">7岁</string>
    <string name="age_8">8岁</string>
    <string name="age_9">9岁</string>
    <string name="age_10">10岁</string>
    <string name="age_11">11岁</string>
    <string name="age_12">12岁</string>
    <string name="basis_none">无基础</string>
    <string name="basis_a_little">有点基础</string>
    <string name="basis_one">小学一年级水平</string>
    <string name="basis_two">小学二年级水平</string>
    <string name="basis_three">小学三年级水平</string>
    <string name="basis_four">小学四年级水平</string>
    <string name="basis_five">小学五年级水平</string>
    <string name="basis_six">小学六年级水平</string>
</resources>