<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_course"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_my_course" />
        <item
            android:id="@+id/nav_class_schedule"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_class_schedule" />


        <item
            android:id="@+id/nav_task"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_task" />

        <item
            android:id="@+id/nav_my_evaluation"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_my_evaluation" />

        <item
            android:id="@+id/nav_my_order"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_my_order" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_setting" />


    </group>
</menu>
