<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_course">

    <fragment
        android:id="@+id/nav_course"
        android:name="com.ftacloud.student.ui.home.HomeFragment"
        android:label="@string/menu_my_course"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_class_schedule"
        android:name="com.ftacloud.student.ui.gallery.GalleryFragment"
        android:label="@string/menu_class_schedule"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_task"
        android:name="com.ftacloud.student.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_task"
        tools:layout="@layout/fragment_slideshow" />





</navigation>
