<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_circular_bg2"
    android:orientation="vertical">


    <TextView
        android:id="@+id/shooting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:background="@color/font_white"
        android:gravity="center"
        android:text="@string/user_detail_shoot"
        android:textColor="@color/color_zero_level"
        android:textSize="@dimen/font_size_16" />



    <TextView
        android:id="@+id/select_album"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_marginTop="@dimen/dp1"
        android:background="@color/font_white"
        android:gravity="center"
        android:text="@string/user_detail_select"
        android:textColor="@color/color_zero_level"
        android:textSize="@dimen/font_size_16" />

    <TextView
        android:id="@+id/cancel_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_marginTop="@dimen/dp5"
        android:background="@color/font_white"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/color_zero_level"
        android:textSize="@dimen/font_size_16" />


</LinearLayout>