<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/font_white"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <include layout="@layout/inc_title_bar" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp50"
        android:src="@drawable/ic_pay_success" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:text="@string/pay_success"
        android:textColor="@color/color_zero_level"
        android:textSize="@dimen/font_size_18"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/common_hint_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:text="@string/buy_success_message"
        android:textColor="@color/color_first_level"
        android:textSize="@dimen/font_size_14"
        android:visibility="gone"
        tools:visibility="visible" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp60"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/common_next_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp10"
            android:background="@drawable/stock_12_yellow"
            android:gravity="center"
            android:paddingStart="@dimen/dp40"
            android:paddingTop="@dimen/dp10"
            android:paddingEnd="@dimen/dp40"
            android:paddingBottom="@dimen/dp10"
            android:text="@string/look"
            android:textColor="@color/color_ff7a18"
            android:textSize="@dimen/sp14" />


        <TextView
            android:id="@+id/back_home_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/stock_12_yellow"
            android:gravity="center"
            android:paddingStart="@dimen/dp40"
            android:paddingTop="@dimen/dp10"
            android:paddingEnd="@dimen/dp40"
            android:paddingBottom="@dimen/dp10"
            android:text="@string/back_home"
            android:textColor="@color/color_ff7a18"
            android:textSize="@dimen/sp14" />


    </LinearLayout>


</LinearLayout>