<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/dp50" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp53"
        android:src="@drawable/ic_reservation_success" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:gravity="center"
        android:text="@string/appointment_successful"
        android:textColor="@color/color_first_level"
        android:textSize="@dimen/sp18"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp14"
        android:gravity="center"
        android:lineSpacingMultiplier="1.2"
        android:paddingStart="@dimen/dp15"
        android:paddingEnd="@dimen/dp15"
        android:text="@string/appointment_successful_hint"
        android:textColor="@color/color_first_level"
        android:textSize="@dimen/sp15"
         />


    <TextView
        android:id="@+id/back_home_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp40"
        android:background="@drawable/stock_12_yellow"
        android:gravity="center"
        android:lineSpacingMultiplier="1.2"
        android:paddingTop="@dimen/dp10"
        android:paddingBottom="@dimen/dp10"
        android:paddingStart="@dimen/dp20"
        android:paddingEnd="@dimen/dp20"
        android:text="@string/back_to_homepage"
        android:textColor="@color/color_ff7a18"
        android:textSize="@dimen/sp14"
       />


</LinearLayout>