<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_list_gray_background"
    android:orientation="horizontal"
    android:padding="@dimen/dp15">


    <LinearLayout
        android:layout_width="@dimen/dp0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/shape_8_yellow"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/dp8"
            android:paddingBottom="@dimen/dp8"
            android:textColor="@color/font_white"
            android:textSize="@dimen/sp8"
            tools:text="2020-11-19" />

        <!--selector_pad_schedule-->

        <RadioGroup
            android:id="@+id/week_rg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingStart="@dimen/dp8"
            android:paddingEnd="@dimen/dp8">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/zero_rb"
                android:layout_width="@dimen/dp57"
                android:layout_height="@dimen/dp0"
                android:layout_marginTop="@dimen/dp8"
                android:layout_marginBottom="@dimen/dp4"
                android:layout_weight="1"
                android:background="@drawable/selector_pad_schedule"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:textColor="@color/selector_color_pad_schedule"
                android:textSize="@dimen/sp8"
                tools:text="@string/sunday" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/one_rb"
                android:layout_width="@dimen/dp57"
                android:layout_height="@dimen/dp0"
                android:layout_marginTop="@dimen/dp4"
                android:layout_marginBottom="@dimen/dp4"
                android:layout_weight="1"
                android:background="@drawable/selector_pad_schedule"
                android:button="@null"
                android:gravity="center"
                android:textColor="@color/selector_color_pad_schedule"
                android:textSize="@dimen/sp8"
                tools:text="@string/monday" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/two_rb"
                android:layout_width="@dimen/dp57"
                android:layout_height="@dimen/dp0"
                android:layout_marginTop="@dimen/dp4"
                android:layout_marginBottom="@dimen/dp4"
                android:layout_weight="1"
                android:background="@drawable/selector_pad_schedule"
                android:button="@null"
                android:gravity="center"
                android:textColor="@color/selector_color_pad_schedule"
                android:textSize="@dimen/sp8"
                tools:text="@string/tuesday" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/three_rb"
                android:layout_width="@dimen/dp57"
                android:layout_height="@dimen/dp0"
                android:layout_marginTop="@dimen/dp4"
                android:layout_marginBottom="@dimen/dp4"
                android:layout_weight="1"
                android:background="@drawable/selector_pad_schedule"
                android:button="@null"
                android:gravity="center"
                android:textColor="@color/selector_color_pad_schedule"
                android:textSize="@dimen/sp8"
                tools:text="@string/wednesday" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/four_rb"
                android:layout_width="@dimen/dp57"
                android:layout_height="@dimen/dp0"
                android:layout_marginTop="@dimen/dp4"
                android:layout_marginBottom="@dimen/dp4"
                android:layout_weight="1"
                android:background="@drawable/selector_pad_schedule"
                android:button="@null"
                android:gravity="center"
                android:textColor="@color/selector_color_pad_schedule"
                android:textSize="@dimen/sp8"
                tools:text="@string/thursday" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/five_rb"
                android:layout_width="@dimen/dp57"
                android:layout_height="@dimen/dp0"
                android:layout_marginTop="@dimen/dp4"
                android:layout_marginBottom="@dimen/dp4"
                android:layout_weight="1"
                android:background="@drawable/selector_pad_schedule"
                android:button="@null"
                android:gravity="center"
                android:textColor="@color/selector_color_pad_schedule"
                android:textSize="@dimen/sp8"
                tools:text="@string/friday" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/six_rb"
                android:layout_width="@dimen/dp57"
                android:layout_height="@dimen/dp0"
                android:layout_marginTop="@dimen/dp4"
                android:layout_marginBottom="@dimen/dp8"
                android:layout_weight="1"
                android:background="@drawable/selector_pad_schedule"
                android:button="@null"
                android:gravity="center"
                android:textColor="@color/selector_color_pad_schedule"
                android:textSize="@dimen/sp8"
                tools:text="@string/saturday" />


        </RadioGroup>


    </LinearLayout>


    <LinearLayout
        android:layout_width="@dimen/dp0"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:background="@drawable/shape_8_white">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/item_class_schedule" />

    </LinearLayout>


</LinearLayout>